--- a/main.yml
+++ b/main.yml
@@ -1,18 +1,35 @@
 -
- action: for
- for:
- - {action: set, args: ["i", 0]}
+ action: set
+ args: ["i", 0]
+-
+ action: dowhile
+ while:
  - true
+ do:
  -
   action: set
   args:
-  - i
+  - "i"
   -
-    action: math
-    args:
-    - "+"
-    - 1
-    - {action: get, args: ["i"]}
- do:
- - {action: print, args: [{action: get, args: ["i"]}]}
- - {action: wait, args: [0.001]}
+   action: math
+   args:
+   - "+"
+   - 1
+   -
+    action: get
+    args: ["i"]
+ -
+  action: print
+  args:
+  -
+   action: get
+   args: [i]
+  - " : "
+  -
+   action: math
+   args:
+   - "sin"
+   -
+    action: get
+    args: [i]
+ - {action: wait, args: [0]}
